// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallModal component should be rendered correctly if app found 1`] = `
<div
  className="sto-modal--install"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    withCross={true}
  >
    <ModalContent>
      <header
        className="sto-modal-header"
      >
        <div
          aria-busy={undefined}
          className="sto-modal-header-icon"
        >
          <a
            class="sto-modal-header-icon-shield"
            href="https://cozy.io"
            target="_blank"
            title="Cozy Website"
          />
        </div>
        <h2>
          The application Photos will not transmit any personal data to any third parties.
        </h2>
      </header>
      <div
        className="sto-modal-content"
      >
        <_translate
          appName="Photos"
          permissions={Object {}}
        />
        <div>
          <div
            className="sto-modal-controls"
          >
            <button
              className="coz-btn coz-btn--secondary"
              onClick={[Function]}
              role="button"
            >
              Cancel
            </button>
            <button
              aria-busy={undefined}
              className="coz-btn coz-btn--regular coz-btn--download"
              disabled={undefined}
              onClick={[Function]}
              role="button"
            >
              Install
            </button>
          </div>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;

exports[`InstallModal component should be rendered correctly with also app in registry 1`] = `
<div
  className="sto-modal--install"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    withCross={true}
  >
    <ModalContent>
      <header
        className="sto-modal-header"
      >
        <div
          aria-busy={undefined}
          className="sto-modal-header-icon"
        >
          <a
            class="sto-modal-header-icon-shield"
            href="https://cozy.io"
            target="_blank"
            title="Cozy Website"
          />
        </div>
        <h2>
          The application Photos will not transmit any personal data to any third parties.
        </h2>
      </header>
      <div
        className="sto-modal-content"
      >
        <_translate
          appName="Photos"
          permissions={
            Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            }
          }
        />
        <div>
          <Unknown
            source="By electing __Install__, you accept that the application Photos obtains access to these data, only locally and within your Cozy, and in compliance with the terms of service and the privacy policy."
          />
          <div
            className="sto-modal-controls"
          >
            <button
              className="coz-btn coz-btn--secondary"
              onClick={[Function]}
              role="button"
            >
              Cancel
            </button>
            <button
              aria-busy={undefined}
              className="coz-btn coz-btn--regular coz-btn--download"
              disabled={undefined}
              onClick={[Function]}
              role="button"
            >
              Install
            </button>
          </div>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;

exports[`InstallModal component should handle correctly fetchError from props 1`] = `
<div
  className="sto-modal--install"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    withCross={true}
  >
    <ModalContent>
      <header
        className="sto-modal-header"
      >
        <div
          aria-busy={undefined}
          className="sto-modal-header-icon"
        >
          <a
            class="sto-modal-header-icon-shield"
            href="https://cozy.io"
            target="_blank"
            title="Cozy Website"
          />
        </div>
      </header>
      <div
        className="sto-modal-content"
      >
        <p
          class="coz-error"
        >
          Something went wrong when fetching the application informations. Reason: This is a test error
        </p>
      </div>
    </ModalContent>
  </Modal>
</div>
`;

exports[`InstallModal component should handle correctly installError from props 1`] = `
<div
  className="sto-modal--install"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    withCross={true}
  >
    <ModalContent>
      <header
        className="sto-modal-header"
      >
        <div
          aria-busy={undefined}
          className="sto-modal-header-icon"
        >
          <a
            class="sto-modal-header-icon-shield"
            href="https://cozy.io"
            target="_blank"
            title="Cozy Website"
          />
        </div>
        <h2>
          The application Photos will not transmit any personal data to any third parties.
        </h2>
      </header>
      <div
        className="sto-modal-content"
      >
        <_translate
          appName="Photos"
          permissions={Object {}}
        />
        <div>
          <p
            class="coz-error"
          >
            Something went wrong when installing the application on your Cozy. Reason: This is a test error
          </p>
          <div
            className="sto-modal-controls"
          >
            <button
              className="coz-btn coz-btn--secondary"
              onClick={[Function]}
              role="button"
            >
              Cancel
            </button>
            <button
              aria-busy={undefined}
              className="coz-btn coz-btn--regular coz-btn--download"
              disabled={undefined}
              onClick={[Function]}
              role="button"
            >
              Install
            </button>
          </div>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;

exports[`InstallModal component should not break the permissions part if no permissions property found in manifest 1`] = `
<div
  className="sto-modal--install"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    withCross={true}
  >
    <ModalContent>
      <header
        className="sto-modal-header"
      >
        <div
          aria-busy={undefined}
          className="sto-modal-header-icon"
        >
          <a
            class="sto-modal-header-icon-shield"
            href="https://cozy.io"
            target="_blank"
            title="Cozy Website"
          />
        </div>
        <h2>
          The application Photos will not transmit any personal data to any third parties.
        </h2>
      </header>
      <div
        className="sto-modal-content"
      >
        <_translate
          appName="Photos"
          permissions={Object {}}
        />
        <div>
          <div
            className="sto-modal-controls"
          >
            <button
              className="coz-btn coz-btn--secondary"
              onClick={[Function]}
              role="button"
            >
              Cancel
            </button>
            <button
              aria-busy={undefined}
              className="coz-btn coz-btn--regular coz-btn--download"
              disabled={undefined}
              onClick={[Function]}
              role="button"
            >
              Install
            </button>
          </div>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;
